Altered Home page Created static page AboutUs Inserted test images into database

--- a/FrontEnd/API/views/layout.hbs
+++ b/FrontEnd/API/views/layout.hbs
@@ -52,6 +52,9 @@
               <li class="nav-item">
                   <a class="nav-link text-light" href="/camera">Slike</a> 
               </li>
+              <li class="nav-item">
+                  <a class="nav-link text-light" href="/trafficsignimages/add">Prometni znak slike</a> 
+              </li>
           </ul>
         </div>
       </nav>
