--- a/FrontEnd/API/views/camera/addCamera.hbs
+++ b/FrontEnd/API/views/camera/addCamera.hbs
@@ -1,7 +1,7 @@
 <div class="mx-auto col-sm-10">
     <h1>Objavi Sliko</h1>
-    <form action="/camera" method="POST">
-        <label for="src">Src:</label><input class="form-control" type="text" name="src" placeholder="src" required> <br/>
+    <form action="/camera" method="POST" enctype="multipart/form-data">
+        <label for="image">Src:</label><input class="form-control" type="file" name="image" placeholder="image file" required> <br/>
         <div class="tp">
             <input class="btn btn-primary" type="submit" value="Dodaj">
         </div>
